# testes_tecnico_vr

./: .gitignore  README.md  main.py  pov.py  pyproject.toml
consumer/: consumer_entrada.py  consumer_retries.py
tests/: test_produc.py
